just the syntax of picalc

--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -26,6 +26,7 @@ executable hs-picalc-unbound-example-exe
   build-depends:       base
                      , hs-picalc-unbound-example
                      , unbound
+                     , transformers
   default-language:    Haskell2010
 
 test-suite hs-picalc-unbound-example-test
