--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -17,6 +17,10 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , containers
+                     , fgl
+                     , graphviz
+                     , data-partition
   default-language:    Haskell2010
 
 executable hs-picalc-unbound-example-exe
