--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -18,9 +18,11 @@ library
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
                      , containers
-                     , fgl
-                     , graphviz
-                     , data-partition
+                     -- , fgl
+                     -- , graphviz
+                     -- , data-partition
+                     , transformers
+                     , unbound
   default-language:    Haskell2010
 
 executable hs-picalc-unbound-example-exe
