--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     PiCalc SubstLatt
+  exposed-modules:     PiCalc OpenLTS SubstLatt
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , fgl
