--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -13,26 +13,32 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
-library
-  hs-source-dirs:      src
-  exposed-modules:     PiCalc LateLTS OpenLTS SubstLatt
+-- library
+--   hs-source-dirs:
+--   exposed-modules:     PiCalc IdSubLTS OpenLTS SubstLatt
+--   build-depends:       base >= 4.7 && < 5
+--                      , containers
+--                      , fgl
+--                      , graphviz
+--                      , data-partition
+--                      , transformers
+--                      , unbound
+--   default-language:    Haskell2010
+
+executable hs-picalc-unbound-example-exe
+  hs-source-dirs:
+  main-is:             Main.hs
+  other-modules:       PiCalc IdSubLTS OpenLTS OpenBisim SubstLatt
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base >= 4.7 && < 5
+--                     , hs-picalc-unbound-example
                      , containers
                      , fgl
                      , graphviz
                      , data-partition
                      , transformers
                      , unbound
-  default-language:    Haskell2010
-
-executable hs-picalc-unbound-example-exe
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , hs-picalc-unbound-example
-                     , unbound
-                     , transformers
+                     , pretty
   default-language:    Haskell2010
 
 test-suite hs-picalc-unbound-example-test
