some more simplification

--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -36,6 +36,7 @@ executable hs-picalc-unbound-example-exe
                      , fgl
                      , graphviz
                      , data-partition
+                     , data-ordlist
                      , transformers
                      , unbound
                      , pretty
