--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -40,6 +40,7 @@ executable hs-picalc-unbound-example-exe
                      , transformers
                      , unbound
                      , pretty
+                     , uglymemo
   default-language:    Haskell2010
 
 test-suite hs-picalc-unbound-example-test
