--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -46,7 +46,7 @@ test-suite hs-picalc-unbound-example-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , hs-picalc-unbound-example
+--                     , hs-picalc-unbound-example
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
