--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -33,7 +33,7 @@ executable hs-picalc-unbound-example-exe
   build-depends:       base >= 4.7 && < 5
 --                     , hs-picalc-unbound-example
                      , containers
-                     , monadplus
+--                     , monadplus
                      , fgl
                      , graphviz
                      , data-partition
@@ -49,7 +49,7 @@ test-suite hs-picalc-unbound-example-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , hs-picalc-unbound-example
+--                     , hs-picalc-unbound-example
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
