--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -28,7 +28,7 @@ cabal-version:       >=1.10
 executable hs-picalc-unbound-example-exe
   hs-source-dirs:
   main-is:             Main.hs
-  other-modules:       PiCalc IdSubLTS OpenLTS OpenBisim SubstLatt
+  other-modules:       PiCalc IdSubLTS OpenLTS OpenBisim SubstLatt MemoUgly
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base >= 4.7 && < 5
 --                     , hs-picalc-unbound-example
@@ -48,7 +48,7 @@ test-suite hs-picalc-unbound-example-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
-                     , hs-picalc-unbound-example
+--                     , hs-picalc-unbound-example
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
