--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -34,11 +34,12 @@ executable hs-picalc-unbound-example-exe
 --                     , hs-picalc-unbound-example
                      , containers
                      , fgl
+                     , lens
                      , graphviz
                      , data-partition
                      , data-ordlist
                      , transformers
-                     , unbound
+                     , unbound-generics
                      , pretty
                      , uglymemo
   default-language:    Haskell2010
