--- a/hs-picalc-unbound-example.cabal
+++ b/hs-picalc-unbound-example.cabal
@@ -33,11 +33,12 @@ executable hs-picalc-unbound-example-exe
   build-depends:       base >= 4.7 && < 5
                      , containers
                      , fgl
+                     , lens
                      , graphviz
                      , data-partition
                      , data-ordlist
                      , transformers
-                     , unbound
+                     , unbound-generics
                      , pretty
                      , uglymemo
   default-language:    Haskell2010
