--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,8 @@ packages:
 - '.'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: [data-partition-0.3.0.0,unbound-0.5.1.1,RepLib-0.5.4.1]
+extra-deps: [data-partition-0.3.0.0]
+# extra-deps: [data-partition-0.3.0.0,unbound-0.5.1.1,RepLib-0.5.4.1]
 
 # Override default flag values for local packages and extra-deps
 flags: {}
